# Cookbooks

./: .gitignore  LICENSE  README.md  desktop.ini  pyproject.toml
GPT-Data/: pyproject.toml
GPT-Data/gpt_data/: convert.py  merge.py  utils.py
decorators/: README.md  log.py
deep_learning/: gan.py
gui/: README.md  tk.py
julia/: functions.jl
neural-networks/: gan.py
python_releases/: 390.py
tensorboard/: callback.py
tensorboard/tb_callback_dir/train/: events.out.tfevents.1606755041.DESKTOP-DC4MCFQ.1844.120602.v2  events.out.tfevents.1606755048.DESKTOP-DC4MCFQ.profile-empty  events.out.tfevents.1606755166.DESKTOP-DC4MCFQ.2823.602.v2  events.out.tfevents.1606755230.DESKTOP-DC4MCFQ.2059.602.v2  events.out.tfevents.1606755453.DESKTOP-DC4MCFQ.3484.602.v2  events.out.tfevents.1606755687.DESKTOP-DC4MCFQ.3885.602.v2  events.out.tfevents.1606755763.DESKTOP-DC4MCFQ.4327.607.v2  events.out.tfevents.1606755884.DESKTOP-DC4MCFQ.5292.607.v2  events.out.tfevents.1606755894.DESKTOP-DC4MCFQ.5567.607.v2
tensorboard/tb_callback_dir/train/plugins/profile/2020_11_30_11_50_48/: DESKTOP-DC4MCFQ.input_pipeline.pb  DESKTOP-DC4MCFQ.overview_page.pb  DESKTOP-DC4MCFQ.tensorflow_stats.pb
tensorboard/tb_callback_dir/train/plugins/profile/2020_11_30_11_52_51/: DESKTOP-DC4MCFQ.input_pipeline.pb  (+2 more)
tensorboard/tb_callback_dir/validation/: events.out.tfevents.1606755068.DESKTOP-DC4MCFQ.1844.133883.v2  events.out.tfevents.1606755476.DESKTOP-DC4MCFQ.3484.13883.v2  events.out.tfevents.1606755786.DESKTOP-DC4MCFQ.4327.4379.v2  events.out.tfevents.1606755915.DESKTOP-DC4MCFQ.5567.4379.v2
(+11 files in other folders)
